gccida/g0/loc_descriptor
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loc_descriptor/src/dwarf2out.c:8416:47: error: use of undeclared identifier 'machine_mode'
return mem_loc_descriptor( rtl->fld[0].rtx, ( machine_mode)*( ( unsigned __int8 *)rtl + 2)); 
                                              ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loc_descriptor/src/obj/dwarf2out.o] Error 1
